--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo $PATH
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          ls -lah *
+   #   - name: Run a multi-line script
+   #     run: |
+   #      echo "Hello, world 1!"
+   #      echo "Hello, world 2!"
