--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,11 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: ls -lah *
+#      - name: Run a one-line script
+#        run: ls -lah *
 
       # Runs a set of commands using the runners shell
-   #   - name: Run a multi-line script
-   #     run: |
-   #      echo "Hello, world 1!"
-   #      echo "Hello, world 2!"
+      - name: Run a multi-line script
+        run: |
+         wget http://apple.com
+         ls -lah *
