--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-         echo $@
-        with:
+         echo $host "___"
+        ev:
           host: davida.ch-dns.net
          
