--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,15 +29,13 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-         echo $exclude "___"
+         echo $include "___"
         env:
           host: davida.ch-dns.net
           user: ${{ secrets.ftp_user_davida }}
           password: ${{ secrets.ftp_password_davida }}
           localRoot: ./dist/
-          include: |
-            - "*"
-            - ".*"                
+          include: '{"*" , ".*"}'                
           exclude: |
             - "thumbs/*"
             - "qr/*"                                                                   
