--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-         echo $include "___"
+         rsync
         env:
           host: davida.ch-dns.net
           user: ${{ secrets.ftp_user_davida }}
