--- a/sync/package.json
+++ b/sync/package.json
@@ -1,14 +1,14 @@
-  {   
-    "name": "sync",   
-    "version": "1.0.0",   
-    "main": "sync.mjs",   
-    "scripts": {   
-    │ "test": "echo \"Error: no test specified\" && exit 1"   
-    },   
-    "author": "",   
-    "license": "ISC",   
-    "description": "",   
-    "devDependencies": {   
-    │ "ftp-deploy": "^2.4.7"   
-    }   
-  }   
+{
+  "name": "sync",
+  "version": "1.0.0",
+  "main": "sync.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "ftp-deploy": "^2.4.7"
+  }
+}
