--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,10 @@ jobs:
       # Runs a single command using the runners shell
 #      - name: Run a one-line script
 #        run: ls -lah *
-      - name: cd sync
-        run: cd sync
       - name: 🔨 Build Sync
-        run: npm install
+        run: |
+          cd sync
+          npm install
       
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
