--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,6 @@ jobs:
 #      - name: Run a one-line script
 #        run: ls -lah *
       - name: 🔨 Build Sync
-        run: |
-          echo $password "_____________"
-          node sync/sync.js
         env:
           host: davida.ch-dns.net
           user: ${{ secrets.ftp_user_davida }}
@@ -43,6 +40,10 @@ jobs:
           deleteRemote: false                                
           forcePasv: true     
           sftp: false  
+        run: |
+          echo $password "$password_____________"
+          node sync/sync.js
+          
       
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
