--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,7 @@ jobs:
           deleteRemote: false                                
           forcePasv: true     
           sftp: false  
-        run: |
-          node sync/sync.js
+        run: node sync/sync.js
           
       
       # Runs a set of commands using the runners shell
