--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
 #      - name: Run a one-line script
 #        run: ls -lah *
       - name: 🔨 Build Sync
-        with:
+        with: | 
           host: davida.ch-dns.net
           user: ${{ secrets.ftp_user_davida }}
           password: ${{ secrets.ftp_password_davida }}
