--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,20 +29,16 @@ jobs:
 #      - name: Run a one-line script
 #        run: ls -lah *
       - name: 🔨 Build Sync
-        uses: uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          host: davida.ch-dns.net
-          user: ${{ secrets.ftp_user_davida }}
+          server: davida.ch-dns.net
+          username: ${{ secrets.ftp_user_davida }}
           password: ${{ secrets.ftp_password_davida }}
-          localRoot: ./dist/
-          include: '{"*" , ".*"}'                
-          exclude: '{"thumbs/*", "qr/*" }'                                                                   
-          # delete ALL existing files at destination before uploading, if true   
-          deleteRemote: false                                
-          forcePasv: true     
-          sftp: false  
-      //  run: node sync/sync.js
-          
+          protocol: ftp
+          local-dir	: ./dist/
+          server-dir: ./  
+          state-name: ftpSyncLog.json        
+          exclude: '{"thumbs/*", "qr/*" }'                                                                          
       
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
