--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,8 @@ jobs:
 #      - name: Run a one-line script
 #        run: ls -lah *
       - name: 🔨 Build Sync
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-        with:
+       # uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        env:
           server:  ${{ secrets.FTP_HOST_DAVIDA }}
           username: ${{ secrets.FTP_USER_DAVIDA }}
           password: ${{ secrets.FTP_PASSWORD_DAVIDA }}
@@ -38,7 +38,8 @@ jobs:
           local-dir	: ./dist/
           server-dir: ./  
           state-name: ftpSyncLog.json        
-          exclude: '{"thumbs/*", "qr/*" }'                                                                          
+          exclude: '{"thumbs/*", "qr/*" }'  
+        run: nodejs sync/sync.js
       
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
