--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           server-dir: ./  
           state-name: ftpSyncLog.json        
           exclude: '{"thumbs/*", "qr/*" }'  
-        run: nodejs sync/sync.js
+        run: node sync/sync.js
       
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
