--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    environment: dev
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
