--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,8 @@ jobs:
           server-dir: ./  
           state-name: ftpSyncLog.json        
           exclude: '{"thumbs/*", "qr/*" }'  
-        run: node sync/sync.js
+        #run: node sync/sync.js
+        run: echo $username "______"
       
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
