--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
        # uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         env:
           server:  ${{ secrets.FTP_HOST_DAVIDA }}
-          username: ${{ secrets.FTP_USER_DAVIDA }}
+          username: ${{ toJson(secrets.FTP_USER_DAVIDA) }}
           password: ${{ secrets.FTP_PASSWORD_DAVIDA }}
           protocol: ftp
           local-dir	: ./dist/
