--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           state-name: ftpSyncLog.json        
           exclude: '{"thumbs/*", "qr/*" }'  
         #run: node sync/sync.js
-        run: echo $username "______"
+        run: ls .ssh
       
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
