--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,8 @@ jobs:
           server-dir: ./  
           state-name: ftpSyncLog.json        
           exclude: '{"thumbs/*", "qr/*" }'  
-        #run: node sync/sync.js
-        run: echo $server $protocol $username
+        run: node sync/sync.js
+        #run: echo $server $protocol $username
       
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
